fix(ubi9): Using UBI9_TAG instead of hardcoded version

--- a/17/rhel/ubi9/hotspot/Dockerfile
+++ b/17/rhel/ubi9/hotspot/Dockerfile
@@ -1,4 +1,6 @@
 ARG JAVA_VERSION=17.0.10_7
+ARG UBI9_TAG=9.3-1552
+
 FROM eclipse-temurin:"${JAVA_VERSION}"-jdk-ubi9-minimal as jre-build
 
 # Generate smaller java runtime without unneeded files
@@ -13,7 +15,7 @@ RUN jlink \
         --compress=2 \
         --output /javaruntime
 
-FROM registry.access.redhat.com/ubi9/ubi:9.3-1610
+FROM registry.access.redhat.com/ubi9/ubi:${UBI9_TAG}
 
 ENV LANG C.UTF-8
 
