chore: Update JDK 25 module list in Dockerfile for jlink configuration

--- a/alpine/hotspot/Dockerfile
+++ b/alpine/hotspot/Dockerfile
@@ -26,7 +26,8 @@ RUN case "$(jlink --version 2>&1)" in \
       # the compression argument is different for JDK21
       "21."*) set -- "--compress=zip-6" "--add-modules" "ALL-MODULE-PATH" ;; \
       # the compression argument is different for JDK25 (early access)
-      "25"*) set -- "--compress=zip-6" "--add-modules" "java.base,java.logging,java.xml,java.se" ;; \
+      "25"*) mod_list="${JLINK_MODULES:-java.base,java.logging,java.xml,java.management,java.net.http,jdk.crypto.ec}"; \
+             set -- "--compress=zip-6" --add-modules "$mod_list" ;; \
       *) echo "ERROR: unmanaged jlink version pattern" && exit 1 ;; \
     esac; \
     jlink \
