chore: Define default JLINK modules for JDK 25 in Dockerfile

--- a/debian/bookworm/hotspot/Dockerfile
+++ b/debian/bookworm/hotspot/Dockerfile
@@ -3,6 +3,7 @@ ARG BOOKWORM_TAG=20250908
 FROM debian:bookworm-"${BOOKWORM_TAG}" AS jre-build
 
 ARG JAVA_VERSION=17.0.16_8
+ARG JLINK_MODULES_DEFAULT=java.base,java.logging,java.xml,java.management,java.net.http,jdk.crypto.ec,jdk.zipfs,jdk.unsupported,jdk.charsets
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -27,7 +28,8 @@ RUN case "$(jlink --version 2>&1)" in \
       # the compression argument is different for JDK21
       "21."*) set -- "--compress=zip-6" "--add-modules" "ALL-MODULE-PATH" ;; \
       # the compression argument is different for JDK25 (early access)
-      "25"*) mod_list="${JLINK_MODULES:-java.base,java.logging,java.xml,java.management,java.net.http,jdk.crypto.ec,jdk.zipfs,jdk.unsupported,jdk.charsets}"; \
+      "25"*) : "${JLINK_MODULES_DEFAULT:=java.base,java.logging,java.xml,java.management,java.net.http,jdk.crypto.ec,jdk.zipfs,jdk.unsupported,jdk.charsets}"; \
+             mod_list="${JLINK_MODULES:-$JLINK_MODULES_DEFAULT}"; \
              set -- "--compress=zip-6" --add-modules "$mod_list" ;; \
       *) echo "ERROR: unmanaged jlink version pattern" && exit 1 ;; \
     esac; \
